<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_margin="5dp"
    cardview:cardCornerRadius="8dp"
    cardview:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <!-- Rótulos -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/RotuloListaAlunos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/alunos"
                android:textStyle="bold"
                android:textColor="#212121" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/RotuloListaAlunos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/notas"
                android:textStyle="bold"
                android:textColor="#212121" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/RotuloListaAlunos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/acoes"
                android:textStyle="bold"
                android:textColor="#212121" />
        </LinearLayout>

        <!-- Conteúdo -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <!-- Aluno -->
            <LinearLayout
                android:id="@+id/layoutAluno"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_aluno"
                    style="@style/RotuloListaAlunos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="#212121"
                    tools:text="Jose" />

            </LinearLayout>

            <!-- Notas -->
            <LinearLayout
                android:id="@+id/layoutNotas"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_nota1"
                    style="@style/RotuloListaAlunos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="#212121"
                    tools:text="5" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_nota2"
                    style="@style/RotuloListaAlunos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="#212121"
                    tools:text="5" />

            </LinearLayout>

            <!-- Ações -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_edit_Disciplina"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/editar_cadastro"
                    android:padding="4dp"
                    android:src="@drawable/ic_edit" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_delete_Disciplina"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/excluir_aluno"
                    android:padding="4dp"
                    android:src="@drawable/ic_delete" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
