<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="6dp"
    cardview:cardCornerRadius="8dp"
    cardview:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <!-- rotulos -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/RotuloListaAlunos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/alunos"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/RotuloListaAlunos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/m_dia"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/RotuloListaAlunos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/status"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- conteudo -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <!--aluno-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_media_aluno"
                style="@style/RotuloListaAlunos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                tools:text="Jose" />

            <!--notas-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_media"
                style="@style/RotuloListaAlunos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                tools:text="5" />

            <!--status-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_status"
                style="@style/RotuloListaAlunos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:paddingEnd="3dp"
                tools:text="aprovado" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>